add all routes api
